configuration/Mumshad/foundation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 3
  template:
    metadata:
      name: webserver
      labels:
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: nginx
  selector:
    matchLabels:
      tier: frontend
