configuration/Mumshad/foundation/multicontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - ls; sleep 3600;
    image: busybox
    name: busybox-1
    resources: {}
  - args:
    - /bin/sh
    - -c
    - echo Hello World; sleep 3600;
    image: busybox
    name: busybox-2
    resources: {}
  - args:
    - /bin/sh
    - -c
    - echo this is the third container; sleep 3600
    image: busybox
    name: busybox-3
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
