configuration/Mumshad/foundation/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    name: webserver
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
