configuration/Mumshad/foundation/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: nginx
          image: nginx
  serviceName: mysql
