configuration/Mumshad/foundation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30002
  selector:
    tier: backend
